--- a/memory_game/css/style.css/main.css
+++ b/memory_game/css/style.css/main.css
@@ -45,11 +45,13 @@ a:link {
 }
 a {
     margin: 20px;
+    color: blue;
+    font-style: italic;
 }
 nav {
       background-color: #00A6B3;
       color: #FFFFFF; 
-      padding: 20px 0px 20px 0px;   
+      padding: 20px 0px 20px 0px;
 
 }
 main {
